--- a/style.css
+++ b/style.css
@@ -19,20 +19,30 @@ body {
   display: flex;
   gap: 3rem;
   min-width: 30vw;
-  margin-bottom: 5rem;
+  margin:2rem;
 }
 
 #quoteDisplay {
-  max-width: 1024px;
-  max-height: 40vh;
+  font-size: 30px;
+  margin: 20px 0;
+  width: 70vw;
+  height: 50vh;
+  text-align: center;
+  justify-self: center;
+  display: block;
   padding: 1rem;
   overflow-y: scroll;
+  scrollbar-width:none; 
+  word-wrap: break-word;
+  word-break: break-word;
 }
+
+
 
 #changeQuote {
   display: flex;
   justify-content: space-between;
-  margin-top: 5rem;
+  margin-top: 2rem;
 }
 
 #prevBtn,
@@ -43,20 +53,17 @@ body {
 
 #modeToggle {
   position: fixed;
-  top: 2rem;
+  top: 0.5rem;
   right: 2rem;
 }
 
 #categorySelect {
   position: fixed;
-  top: 2rem;
+  top: 0.5rem;
   right: 12rem;
 }
 
-#quoteDisplay {
-  font-size: 30px;
-  margin: 20px 0;
-}
+
 
 button,
 select {
@@ -68,4 +75,22 @@ select {
   outline: none;
   background: aqua;
   border-radius: 2rem;
+}
+
+@media (max-width: 768px) { 
+  #fontChange {
+    flex-direction: column; 
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
+  #modeToggle{
+    right: 0.5rem;
+  }
+  #categorySelect {
+    right: 10rem;
+  }
+  #quoteDisplay {
+    width: 90vw;
+  }
 }
