--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: black;
   color: white;
-  padding-top: 4.6rem;
+  padding-top: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -94,5 +94,6 @@ select {
   }
   #quoteDisplay {
     width: 90vw;
+    height: 35vh;
   }
 }
